# SimpleParticleSim

./: .clang-format  .gitignore  CMakeLists.txt  camera.c  camera.h  grid.c  grid.h  main.c  particle.c  particle.h  particle_system.c  particle_system.h  shader.c  shader.h  simulation.c  simulation.h  xmath.c  xmath.h
assets/: CMakeLists.txt
assets/shaders/: CMakeLists.txt  grid.frag.slang  grid.vert.slang  particle.vert.slang  particle_system.vert.slang
